# LearnOpengl

./: .gitignore  CMakeLists.txt  ReadMe  main.cpp
Audio/: BitReader.cpp  BitReader.h  FileReader.cpp  FileReader.h  main.cpp  publicHeader.h
include/: public.h
resource/: basic.fs  basic.vs
src/: main.cpp
